--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,6 +38,15 @@
   </div>
 </nav>
     <div class="container mt-5 pt-4">
+      {% with message =get_flashed_messages()%}
+      {% if message %}
+      {% for message in messages%}
+      <div class="alert alert-success">
+        {{message}}
+      </div>
+      {%endfor%}
+      {%endif%}
+      {%endwith%}
    {%block content%}
 {%endblock%}
 
