--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,56 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet" >
-    <title>Document</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="{{ url_for('index') }}">ICO-801-9</a>
- 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
- 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
- 
-        <li class="nav-item">
-          <a class="nav-link {% if request.endpoint == 'index' %}active{% endif %}"
-             href="{{ url_for('index') }}">Inicio</a>
-        </li>
- 
-        <li class="nav-item">
-          <a class="nav-link {% if request.endpoint == 'usuarios' %}active{% endif %}"
-             href="">Usuarios</a>
-        </li>
- 
-        <li class="nav-item">
-          <a class="nav-link {% if request.endpoint == 'alumnos' %}active{% endif %}"
-             href="">Alumnos</a>
-        </li>
- 
-      </ul>
-    </div>
-  </div>
-</nav>
-    <div class="container mt-5 pt-4">
-      {% with message =get_flashed_messages()%}
-      {% if message %}
-      {% for message in messages%}
-      <div class="alert alert-success">
-        {{message}}
-      </div>
-      {%endfor%}
-      {%endif%}
-      {%endwith%}
-   {%block content%}
-{%endblock%}
+    <title>{{ titulo }}</title>
 
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- CSS Cinépolis -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/cinepolis.css') }}">
+</head>
+
+<body>
+
+<nav class="navbar navbar-dark cinepolis-navbar">
+    <div class="container">
+        <span class="navbar-brand fw-bold">🎬 Cinépolis</span>
+    </div>
+</nav>
+
+<div class="container mt-5">
+    {% block content %}{% endblock %}
 </div>
-<script src="../static/bootstrap/js/bootstrap.bundle.min.js" crossorigin="anonymous" ></script>
+
 </body>
 </html>
